WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274991
Assert availability of librtc
https://bugs.webkit.org/show_bug.cgi?id=274991
Summary
Assert availability of librtc
Vitor Roriz
Reported
2024-05-31 14:12:30 PDT
If for some reason librtc is not present, we could crash assert immediately instead of crash on a bad access.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-31 14:12:49 PDT
<
rdar://problem/129080708
>
Vitor Roriz
Comment 2
2024-05-31 14:15:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29395
EWS
Comment 3
2024-05-31 21:36:06 PDT
Committed
279610@main
(ae12b87cfbd4): <
https://commits.webkit.org/279610@main
> Reviewed commits have been landed. Closing PR #29395 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug