Assert availability of libwebrtc https://bugs.webkit.org/show_bug.cgi?id=274991 rdar://problem/129080708

Reviewed by Alexey Proskuryakov and Brent Fulgham.

If for some reason libwebrtc is not present, we could crash assert immediately instead of crash on a bad access.
Also, we are reverting https://commits.webkit.org/279586@main where we would not crash if libwebrtc
would not be available.

* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProviderCocoa.cpp:
(WebCore::WebRTCProvider::webRTCAvailable):

Canonical link: https://commits.webkit.org/279610@main